--- a/index.html
+++ b/index.html
@@ -409,7 +409,68 @@
         <li><strong>🤝 Phase 5:</strong> Secure strategic partnerships with **top Key Opinion Leaders (KOLs)** and major advertisers to push Bogey’s brand beyond crypto and into mainstream culture. Through influencer collaborations, sponsorships, and viral marketing campaigns, we will position Bogey as **the most recognized meme coin & brand in the space.**</li>
         <li><strong>🔥 Phase 6:</strong> Launch **exclusive BOGEY streetwear & collectibles.**</li>
         <li><strong>💰 Phase 7:</strong> Secure **Major Exchange Listings & Game-Changing Partnerships.**</li>
+        
         <li><strong>🏆 Phase 8:</strong> Expand into **esports, rap battle collaborations, and Web3 entertainment.**</li>
+
+  <!-- Future Vision & Long-Term Plan Section -->
+<section id="future-vision" style="text-align: center; margin: 50px auto; padding: 40px; background-color: #1a1a1a; border-radius: 10px;">
+    <h2 style="color: white;">🚀 The Future of Bogey The Bandit: AI Hip-Hop & The Infinite Money Glitch</h2>
+    
+    <p style="color: #D3D3D3; font-size: 18px;">
+        Bogey The Bandit isn’t just a token or a rapper—he’s the **first AI-driven hip-hop icon**, bringing
+        **interactive concerts, AI-generated music, and a blockchain-powered fan economy** to the world.
+    </p>
+
+    <h3 style="color: #FFD700;">🎭 Virtual Concerts & The Metaverse Takeover</h3>
+    <p style="color: #D3D3D3; font-size: 16px;">
+        Imagine stepping into a **digital arena** where Bogey isn’t just a performer—you’re part of the show.
+        From **real-time AI freestyle battles** to **interactive fan-driven experiences**, Bogey’s concerts 
+        will revolutionize entertainment in Web3.
+    </p>
+
+    <ul style="list-style-type: none; color: #D3D3D3; text-align: left; max-width: 800px; margin: auto;">
+        <li>🔥 **AI-powered live performances**—real-time freestyles, guest collaborations & insane visuals.</li>
+        <li>🎟 **NFT concert tickets**—VIP access, digital merch, and exclusive collectibles.</li>
+        <li>🌍 **Attend from anywhere**—VR, mobile, desktop, no barriers.</li>
+        <li>🚀 **Rap battles & AI guest appearances**—experience next-level hip-hop culture.</li>
+    </ul>
+
+    <h3 style="color: #FFD700;">💰 The Infinite Money Glitch: Concerts, Token Burns & Scarcity Loop</h3>
+    <p style="color: #D3D3D3; font-size: 16px;">
+        Bogey’s ecosystem is built for **long-term growth**—every concert fuels the next, ensuring constant hype and momentum.
+    </p>
+
+    <ul style="list-style-type: none; color: #D3D3D3; text-align: left; max-width: 800px; margin: auto;">
+        <li>1️⃣ Fans **buy Bogey tokens** to attend virtual concerts.</li>
+        <li>2️⃣ Concert revenue **buys and burns more tokens**, reducing supply.</li>
+        <li>3️⃣ As tokens **burn**, remaining tokens **become rarer and more valuable**.</li>
+        <li>4️⃣ Higher token value **fuels more demand**, bringing in new buyers.</li>
+        <li>🔥 **More tickets = More burns = Higher value = The cycle repeats.**</li>
+    </ul>
+
+    <h3 style="color: #FFD700;">📈 Long-Term Vision: The Rise of The AI Hip-Hop Empire</h3>
+    <p style="color: #D3D3D3; font-size: 16px;">
+        Bogey The Bandit **isn’t just a musician—he’s a movement**. We’re pushing AI rap into every part of digital culture.
+    </p>
+
+    <ul style="list-style-type: none; color: #D3D3D3; text-align: left; max-width: 800px; margin: auto;">
+        <li>🎬 **3D Virtual Music Videos** – Interactive, first-person music experiences.</li>
+        <li>🎮 **Bogey in Web3 Gaming** – Playable AI rap icon in battle arenas.</li>
+        <li>🤖 **AI-Generated Music Evolution** – Constantly evolving AI-powered rap.</li>
+        <li>🌐 **Decentralized Music Economy** – Own digital assets tied to Bogey’s legacy.</li>
+    </ul>
+
+    <h3 style="color: #FFD700;">🏆 The End Goal: Making Bogey The GOAT of AI Hip-Hop</h3>
+    <p style="color: #D3D3D3; font-size: 16px;">
+        This is about more than just a career—it’s about **creating history**. We’re making **Bogey the first true AI music icon**, a name that will be remembered as the leader of a new wave in hip-hop and AI entertainment.
+    </p>
+
+    <p style="color: #FFD700; font-size: 20px; font-weight: bold;">
+        💎 The bigger Bogey gets, the more valuable every token becomes.  
+        🚀 Join the movement. Secure your spot in history.  
+    </p>
+</section>
+
         <!-- Looping Video - Bogey Award -->
 <section id="bogey-award-video" style="text-align: center; margin: 40px 0;">
     <h2>🎤 Witness the Rise of a Legend!</h2>
@@ -422,8 +483,7 @@
     </video>
 </section>
 
-        <li><strong>📺 Phase 9:</strong> **Develop and launch the full BOGEY the Bandit Animated Cartoon.**</li>
-    </ul>
+
     <p>🚀 **This isn’t just a coin—it’s a movement.** The rap game’s first crypto icon is just getting started.</p>
 </section>
 
