--- a/index.html
+++ b/index.html
@@ -1249,10 +1249,10 @@
 <body>
     <section class="hero">
         <video autoplay loop muted playsinline>
-            <source src="videos/bogey-loop.mp4" type="video/mp4">
+            <source src="/BogeyWeb/bogey-loop.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
-            <img src="images/Bogey The Bandit label.png" alt="Bogey The Bandit">
+            <img src="/BogeyWeb/Bogey The Bandit label.png" alt="Bogey The Bandit">
             <h1 class="heading-gradient">BOGEY THE BANDIT 🦝🔥</h1>
             <p>The First Meme Coin on Spotify, Apple Music, YouTube Music & Amazon Music!</p>
             
@@ -1327,7 +1327,7 @@
                             </div>
                         </div>
                         <audio id="audio-player" class="w-full" controls style="display: none;">
-                            <source src="audio/Rug-Pull.mp3" type="audio/mpeg">
+                            <source src="/BogeyWeb/Rug-Pull.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -1351,13 +1351,13 @@
             <h2 class="heading-gradient text-center">🎵 Listen to Bogey on Streaming Platforms</h2>
             <div class="platforms">
                 <a href="https://music.youtube.com/search?q=bogey+the+bandit" target="_blank">
-                    <img src="images/youtube-logo.avif" alt="YouTube Music">
+                    <img src="/BogeyWeb/youtube-logo.avif" alt="YouTube Music">
                 </a>
                 <a href="https://open.spotify.com/artist/7vF2a3zhQ6rC3TEm6IdmUt" target="_blank">
-                    <img src="images/spotify-logo.png" alt="Spotify">
+                    <img src="/BogeyWeb/spotify-logo.png" alt="Spotify">
                 </a>
                 <a href="https://music.apple.com/us/artist/bogey-the-bandit/1796362044" target="_blank">
-                    <img src="images/Apple_Music_icon.svg.png" alt="Apple Music">
+                    <img src="/BogeyWeb/Apple_Music_icon.svg.png" alt="Apple Music">
                 </a>
             </div>
         </div>
@@ -1446,46 +1446,46 @@
             <div class="slideshow-container">
                 <div class="slideshow-wrapper">
                     <div class="slide">
-                        <img src="images/1.png" alt="Bogey Gallery Image 1">
+                        <img src="/BogeyWeb/1.png" alt="Gallery Image 1">
                     </div>
                     <div class="slide">
-                        <img src="images/2.png" alt="Bogey Gallery Image 2">
+                        <img src="/BogeyWeb/2.png" alt="Gallery Image 2">
                     </div>
                     <div class="slide">
-                        <img src="images/3.png" alt="Bogey Gallery Image 3">
+                        <img src="/BogeyWeb/3.png" alt="Gallery Image 3">
                     </div>
                     <div class="slide">
-                        <img src="images/4.png" alt="Bogey Gallery Image 4">
+                        <img src="/BogeyWeb/4.png" alt="Gallery Image 4">
                     </div>
                     <div class="slide">
-                        <img src="images/5.png" alt="Bogey Gallery Image 5">
+                        <img src="/BogeyWeb/5.png" alt="Gallery Image 5">
                     </div>
                     <div class="slide">
-                        <img src="images/6.png" alt="Bogey Gallery Image 6">
+                        <img src="/BogeyWeb/6.png" alt="Gallery Image 6">
                     </div>
                     <div class="slide">
-                        <img src="images/7.png" alt="Bogey Gallery Image 7">
+                        <img src="/BogeyWeb/7.png" alt="Gallery Image 7">
                     </div>
                     <div class="slide">
-                        <img src="images/8.png" alt="Bogey Gallery Image 8">
+                        <img src="/BogeyWeb/8.png" alt="Gallery Image 8">
                     </div>
                     <div class="slide">
-                        <img src="images/9.png" alt="Bogey Gallery Image 9">
+                        <img src="/BogeyWeb/9.png" alt="Gallery Image 9">
                     </div>
                     <div class="slide">
-                        <img src="images/10.png" alt="Bogey Gallery Image 10">
+                        <img src="/BogeyWeb/10.png" alt="Gallery Image 10">
                     </div>
                     <div class="slide">
-                        <img src="images/11.png" alt="Bogey Gallery Image 11">
+                        <img src="/BogeyWeb/11.png" alt="Gallery Image 11">
                     </div>
                     <div class="slide">
-                        <img src="images/12.png" alt="Bogey Gallery Image 12">
+                        <img src="/BogeyWeb/12.png" alt="Gallery Image 12">
                     </div>
                     <div class="slide">
-                        <img src="images/13.png" alt="Bogey Gallery Image 13">
+                        <img src="/BogeyWeb/13.png" alt="Gallery Image 13">
                     </div>
                     <div class="slide">
-                        <img src="images/14.png" alt="Bogey Gallery Image 14">
+                        <img src="/BogeyWeb/14.png" alt="Gallery Image 14">
                     </div>
                 </div>
                 <button class="slideshow-nav prev" onclick="changeSlide(-1)">
@@ -1509,49 +1509,49 @@
             <h2 class="heading-gradient text-center">🎨 Bogey's Bandits NFTs</h2>
             <div class="nft-slideshow">
                 <div class="nft-slide active">
-                    <img src="images/nfts/BANDIT-001.png" alt="BANDIT-001">
+                    <img src="/BogeyWeb/BANDIT-001.png" alt="BANDIT-001">
                     <div class="nft-info">
                         <h3>BANDIT-001</h3>
                         <p>Bogey's Bandits Collection</p>
                     </div>
                 </div>
                 <div class="nft-slide">
-                    <img src="images/nfts/BANDIT-002.png" alt="BANDIT-002">
+                    <img src="/BogeyWeb/BANDIT-002.png" alt="BANDIT-002">
                     <div class="nft-info">
                         <h3>BANDIT-002</h3>
                         <p>Bogey's Bandits Collection</p>
                     </div>
                 </div>
                 <div class="nft-slide">
-                    <img src="images/nfts/BANDIT-003.png" alt="BANDIT-003">
+                    <img src="/BogeyWeb/BANDIT-003.png" alt="BANDIT-003">
                     <div class="nft-info">
                         <h3>BANDIT-003</h3>
                         <p>Bogey's Bandits Collection</p>
                     </div>
                 </div>
                 <div class="nft-slide">
-                    <img src="images/nfts/BANDIT-004.png" alt="BANDIT-004">
+                    <img src="/BogeyWeb/BANDIT-004.png" alt="BANDIT-004">
                     <div class="nft-info">
                         <h3>BANDIT-004</h3>
                         <p>Bogey's Bandits Collection</p>
                     </div>
                 </div>
                 <div class="nft-slide">
-                    <img src="images/nfts/BANDIT-005.png" alt="BANDIT-005">
+                    <img src="/BogeyWeb/BANDIT-005.png" alt="BANDIT-005">
                     <div class="nft-info">
                         <h3>BANDIT-005</h3>
                         <p>Bogey's Bandits Collection</p>
                     </div>
                 </div>
                 <div class="nft-slide">
-                    <img src="images/nfts/BANDIT-006.png" alt="BANDIT-006">
+                    <img src="/BogeyWeb/BANDIT-006.png" alt="BANDIT-006">
                     <div class="nft-info">
                         <h3>BANDIT-006</h3>
                         <p>Bogey's Bandits Collection</p>
                     </div>
                 </div>
                 <div class="nft-slide">
-                    <img src="images/nfts/BANDIT-007.png" alt="BANDIT-007">
+                    <img src="/BogeyWeb/BANDIT-007.png" alt="BANDIT-007">
                     <div class="nft-info">
                         <h3>BANDIT-007</h3>
                         <p>Bogey's Bandits Collection</p>
@@ -1600,13 +1600,13 @@
             <h2 class="heading-gradient text-center">Join Bogey's Community</h2>
             <div class="social-links">
                 <a href="https://discord.gg/yPs4x5H8RK" target="_blank">
-                    <img src="images/discord-logo.png" alt="Discord">
+                    <img src="/BogeyWeb/discord-logo.png" alt="Discord">
                 </a>
                 <a href="https://x.com/Bogey_TheBandit" target="_blank">
-                    <img src="images/x-logo.png" alt="X (Twitter)">
+                    <img src="/BogeyWeb/x-logo.png" alt="X (Twitter)">
                 </a>
                 <a href="https://t.me/bogeythebandit" target="_blank">
-                    <img src="images/Telegram_2019_Logo.svg.png" alt="Telegram">
+                    <img src="/BogeyWeb/Telegram_2019_Logo.svg.png" alt="Telegram">
                 </a>
             </div>
         </div>
@@ -1948,6 +1948,15 @@
             const address = document.getElementById('coin-address').textContent;
             navigator.clipboard.writeText(address).then(() => {
                 const copyBtn = document.querySelector('.copy-btn');
+                copyBtn.classList.add('copied');
+                setTimeout(() => {
+                    copyBtn.classList.remove('copied');
+                }, 2000);
+            });
+        }
+    </script>
+</body>
+</html> 
                 copyBtn.classList.add('copied');
                 setTimeout(() => {
                     copyBtn.classList.remove('copied');
