--- a/index.html
+++ b/index.html
@@ -1248,11 +1248,11 @@
 </head>
 <body>
     <section class="hero">
-        <video autoplay loop muted playsinline>
+        <video autoplay muted loop playsinline>
             <source src="bogey-loop.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
-            <img src="Bogey The Bandit label.png" alt="Bogey The Bandit">
+            <img src="Bogey The Bandit label.png" alt="Bogey The Bandit Label">
             <h1 class="heading-gradient">BOGEY THE BANDIT 🦝🔥</h1>
             <p>The First Meme Coin on Spotify, Apple Music, YouTube Music & Amazon Music!</p>
             
@@ -1450,46 +1450,46 @@
             <div class="slideshow-container">
                 <div class="slideshow-wrapper">
                     <div class="slide">
-                        <img src="1.png" alt="Gallery Image 1">
+                        <img src="bogey-rap-video.png" alt="Gallery Image 1">
                     </div>
                     <div class="slide">
-                        <img src="2.png" alt="Gallery Image 2">
+                        <img src="bogey-rapping.png" alt="Gallery Image 2">
                     </div>
                     <div class="slide">
-                        <img src="3.png" alt="Gallery Image 3">
+                        <img src="bogey-live-performance.png" alt="Gallery Image 3">
                     </div>
                     <div class="slide">
-                        <img src="4.png" alt="Gallery Image 4">
+                        <img src="concert.webp" alt="Gallery Image 4">
                     </div>
                     <div class="slide">
-                        <img src="5.png" alt="Gallery Image 5">
+                        <img src="stage-performance.webp" alt="Gallery Image 5">
                     </div>
                     <div class="slide">
-                        <img src="6.png" alt="Gallery Image 6">
+                        <img src="countingracksbogey.webp" alt="Gallery Image 6">
                     </div>
                     <div class="slide">
-                        <img src="7.png" alt="Gallery Image 7">
+                        <img src="jumping-crowd.webp" alt="Gallery Image 7">
                     </div>
                     <div class="slide">
-                        <img src="8.png" alt="Gallery Image 8">
+                        <img src="HoodLegend.webp" alt="Gallery Image 8">
                     </div>
                     <div class="slide">
-                        <img src="9.png" alt="Gallery Image 9">
+                        <img src="StageBogey.webp" alt="Gallery Image 9">
                     </div>
                     <div class="slide">
-                        <img src="10.png" alt="Gallery Image 10">
+                        <img src="SwoleBogey.webp" alt="Gallery Image 10">
                     </div>
                     <div class="slide">
-                        <img src="11.png" alt="Gallery Image 11">
+                        <img src="Bogeywithhat.webp" alt="Gallery Image 11">
                     </div>
                     <div class="slide">
-                        <img src="12.png" alt="Gallery Image 12">
+                        <img src="hardbattle.webp" alt="Gallery Image 12">
                     </div>
                     <div class="slide">
-                        <img src="13.png" alt="Gallery Image 13">
+                        <img src="racks.webp" alt="Gallery Image 13">
                     </div>
                     <div class="slide">
-                        <img src="14.png" alt="Gallery Image 14">
+                        <img src="Album1.jpg" alt="Gallery Image 14">
                     </div>
                 </div>
                 <button class="slideshow-nav prev" onclick="changeSlide(-1)">
