--- a/index.html
+++ b/index.html
@@ -242,42 +242,78 @@
         }
 
         .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            position: relative;
+            max-width: 1000px;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+
+        .gallery-container {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
         }
 
         .gallery-item {
+            flex: 0 0 100%;
             position: relative;
-            aspect-ratio: 1;
+            aspect-ratio: 16/9;
             border-radius: 8px;
             overflow: hidden;
             border: 2px solid transparent;
             transition: all 0.3s;
         }
 
-        .gallery-item:hover {
-            border-color: var(--bogey-gold);
-            transform: scale(1.05);
-        }
-
         .gallery-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.3s;
         }
 
-        .gallery-item:hover img {
+        .gallery-navigation {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .gallery-nav {
+            background: var(--bogey-gold);
+            border: none;
+            color: var(--bogey-dark);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            transition: all 0.3s;
+        }
+
+        .gallery-nav:hover {
+            background: var(--bogey-gold-dark);
             transform: scale(1.1);
         }
 
-        .gallery-item .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        .gallery-dots {
+            display: flex;
+            gap: 10px;
+        }
+
+        .gallery-dot {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: rgba(255, 215, 0, 0.3);
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .gallery-dot.active {
+            background: var(--bogey-gold);
+            transform: scale(1.2);
         }
 
         .social-links {
@@ -723,8 +759,10 @@
         }
 
         .roadmap-slide {
-            display: none;
+            position: absolute;
+            width: 100%;
             opacity: 0;
+            visibility: hidden;
             transform: translateX(100px);
             transition: all 0.5s ease-in-out;
             background: rgba(26, 26, 26, 0.8);
@@ -736,8 +774,9 @@
         }
 
         .roadmap-slide.active {
-            display: block;
+            position: relative;
             opacity: 1;
+            visibility: visible;
             transform: translateX(0);
         }
 
@@ -854,104 +893,60 @@
         }
 
         .nft-container {
-            max-width: 800px;
+            position: relative;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 40px 0;
+            overflow: hidden;
         }
 
         .nft-slideshow {
-            position: relative;
-            margin-bottom: 30px;
+            display: flex;
+            transition: transform 0.5s ease-in-out;
         }
 
         .nft-slide {
-            display: none;
-            opacity: 0;
-            transform: translateX(100px);
-            transition: all 0.5s ease-in-out;
-            background: rgba(26, 26, 26, 0.8);
-            border: 2px solid var(--bogey-gold);
-            border-radius: 16px;
+            flex: 0 0 100%;
+            position: relative;
+            aspect-ratio: 1;
+            border-radius: 8px;
             overflow: hidden;
-            box-shadow: 0 8px 32px rgba(255, 215, 0, 0.1);
-        }
-
-        .nft-slide.active {
-            display: block;
-            opacity: 1;
-            transform: translateX(0);
+            border: 2px solid transparent;
+            transition: all 0.3s;
         }
 
         .nft-slide img {
             width: 100%;
-            height: 500px;
-            object-fit: contain;
-            background: var(--bogey-darker);
-        }
-
-        .nft-info {
-            padding: 20px;
-            text-align: center;
-            background: rgba(26, 26, 26, 0.8);
-            border-top: 1px solid var(--bogey-gold);
-        }
-
-        .nft-info h3 {
-            color: var(--bogey-gold);
-            font-family: 'Montserrat', sans-serif;
-            font-size: 2rem;
-            margin-bottom: 10px;
-        }
-
-        .nft-info p {
-            color: var(--bogey-gold);
-            opacity: 0.8;
-            font-size: 1.2rem;
+            height: 100%;
+            object-fit: cover;
         }
 
         .nft-navigation {
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             gap: 20px;
-            margin-bottom: 30px;
+            margin-top: 20px;
         }
 
         .nft-nav {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 1rem;
-            pointer-events: none;
-            z-index: 2;
-        }
-
-        .nft-nav button {
-            position: relative;
-            background: rgba(0, 0, 0, 0.5);
+            background: var(--bogey-gold);
             border: none;
-            color: var(--bogey-gold);
-            font-size: 2rem;
-            cursor: pointer;
-            padding: 1rem;
+            color: var(--bogey-dark);
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
-            transition: all 0.3s ease;
-            pointer-events: auto;
-            width: 50px;
-            height: 50px;
+            cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 20px;
+            transition: all 0.3s;
         }
 
-        .nft-nav button:hover {
-            background: rgba(0, 0, 0, 0.8);
-            color: var(--bogey-gold);
+        .nft-nav:hover {
+            background: var(--bogey-gold-dark);
+            transform: scale(1.1);
         }
 
         .nft-dots {
@@ -960,8 +955,8 @@
         }
 
         .nft-dots .dot {
-            width: 12px;
-            height: 12px;
+            width: 10px;
+            height: 10px;
             border-radius: 50%;
             background: rgba(255, 215, 0, 0.3);
             cursor: pointer;
@@ -1447,62 +1442,56 @@
     <section>
         <div class="container">
             <h2 class="heading-gradient text-center">📸 Bogey's Gallery</h2>
-            <div class="slideshow-container">
-                <div class="slideshow-wrapper">
-                    <div class="slide">
+            <div class="gallery">
+                <div class="gallery-container">
+                    <div class="gallery-item">
                         <img src="bogey-rap-video.png" alt="Gallery Image 1">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="bogey-rapping.png" alt="Gallery Image 2">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="bogey-live-performance.png" alt="Gallery Image 3">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="concert.webp" alt="Gallery Image 4">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="stage-performance.webp" alt="Gallery Image 5">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="countingracksbogey.webp" alt="Gallery Image 6">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="jumping-crowd.webp" alt="Gallery Image 7">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="HoodLegend.webp" alt="Gallery Image 8">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="StageBogey.webp" alt="Gallery Image 9">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="SwoleBogey.webp" alt="Gallery Image 10">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="Bogeywithhat.webp" alt="Gallery Image 11">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="hardbattle.webp" alt="Gallery Image 12">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="racks.webp" alt="Gallery Image 13">
                     </div>
-                    <div class="slide">
+                    <div class="gallery-item">
                         <img src="Album1.jpg" alt="Gallery Image 14">
                     </div>
                 </div>
-                <button class="slideshow-nav prev" onclick="changeSlide(-1)">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-                    </svg>
-                </button>
-                <button class="slideshow-nav next" onclick="changeSlide(1)">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-                    </svg>
-                </button>
-                <div class="slideshow-dots"></div>
+                <div class="gallery-navigation">
+                    <button class="gallery-nav" onclick="changeGallerySlide(-1)">❮</button>
+                    <div class="gallery-dots"></div>
+                    <button class="gallery-nav" onclick="changeGallerySlide(1)">❯</button>
+                </div>
             </div>
         </div>
     </section>
@@ -1511,61 +1500,35 @@
     <section class="nft-section">
         <div class="container">
             <h2 class="heading-gradient text-center">🎨 Bogey's Bandits NFTs</h2>
-            <div class="nft-slideshow">
-                <div class="nft-slide active">
-                    <img src="BANDIT-001.png" alt="BANDIT-001">
-                    <div class="nft-info">
-                        <h3>BANDIT-001</h3>
-                        <p>Bogey's Bandits Collection</p>
+            <div class="nft-container">
+                <div class="nft-slideshow">
+                    <div class="nft-slide">
+                        <img src="BANDIT-001.png" alt="BANDIT-001">
+                    </div>
+                    <div class="nft-slide">
+                        <img src="BANDIT-002.png" alt="BANDIT-002">
+                    </div>
+                    <div class="nft-slide">
+                        <img src="BANDIT-003.png" alt="BANDIT-003">
+                    </div>
+                    <div class="nft-slide">
+                        <img src="BANDIT-004.png" alt="BANDIT-004">
+                    </div>
+                    <div class="nft-slide">
+                        <img src="BANDIT-005.png" alt="BANDIT-005">
+                    </div>
+                    <div class="nft-slide">
+                        <img src="BANDIT-006.png" alt="BANDIT-006">
+                    </div>
+                    <div class="nft-slide">
+                        <img src="BANDIT-007.png" alt="BANDIT-007">
                     </div>
                 </div>
-                <div class="nft-slide">
-                    <img src="BANDIT-002.png" alt="BANDIT-002">
-                    <div class="nft-info">
-                        <h3>BANDIT-002</h3>
-                        <p>Bogey's Bandits Collection</p>
-                    </div>
+                <div class="nft-navigation">
+                    <button class="nft-nav" onclick="changeNFTSlide(-1)">❮</button>
+                    <div class="nft-dots"></div>
+                    <button class="nft-nav" onclick="changeNFTSlide(1)">❯</button>
                 </div>
-                <div class="nft-slide">
-                    <img src="BANDIT-003.png" alt="BANDIT-003">
-                    <div class="nft-info">
-                        <h3>BANDIT-003</h3>
-                        <p>Bogey's Bandits Collection</p>
-                    </div>
-                </div>
-                <div class="nft-slide">
-                    <img src="BANDIT-004.png" alt="BANDIT-004">
-                    <div class="nft-info">
-                        <h3>BANDIT-004</h3>
-                        <p>Bogey's Bandits Collection</p>
-                    </div>
-                </div>
-                <div class="nft-slide">
-                    <img src="BANDIT-005.png" alt="BANDIT-005">
-                    <div class="nft-info">
-                        <h3>BANDIT-005</h3>
-                        <p>Bogey's Bandits Collection</p>
-                    </div>
-                </div>
-                <div class="nft-slide">
-                    <img src="BANDIT-006.png" alt="BANDIT-006">
-                    <div class="nft-info">
-                        <h3>BANDIT-006</h3>
-                        <p>Bogey's Bandits Collection</p>
-                    </div>
-                </div>
-                <div class="nft-slide">
-                    <img src="BANDIT-007.png" alt="BANDIT-007">
-                    <div class="nft-info">
-                        <h3>BANDIT-007</h3>
-                        <p>Bogey's Bandits Collection</p>
-                    </div>
-                </div>
-                <div class="nft-nav">
-                    <button onclick="changeNFTSlide(-1)">❮</button>
-                    <button onclick="changeNFTSlide(1)">❯</button>
-                </div>
-                <div class="nft-dots"></div>
             </div>
             <div class="nft-cta">
                 <a href="https://solsea.io/c/67c4596c6448d04526d94974" target="_blank" class="btn-primary">View Collection on SolSea</a>
@@ -1896,57 +1859,33 @@
 
         // NFT Slideshow functionality
         let currentNFTSlide = 0;
+        const nftContainer = document.querySelector('.nft-slideshow');
         const nftSlides = document.querySelectorAll('.nft-slide');
-        const nftDotsContainer = document.querySelector('.nft-dots');
+        const nftDots = document.querySelector('.nft-dots');
 
         // Create dots for NFT slides
         nftSlides.forEach((_, index) => {
             const dot = document.createElement('div');
-            dot.classList.add('dot');
-            if (index === 0) dot.classList.add('active');
+            dot.className = 'dot' + (index === 0 ? ' active' : '');
             dot.onclick = () => goToNFTSlide(index);
-            nftDotsContainer.appendChild(dot);
+            nftDots.appendChild(dot);
         });
-
-        const nftDots = document.querySelectorAll('.nft-dots .dot');
-
-        function updateNFTSlideshow() {
-            // Update active states
-            nftSlides.forEach((slide, index) => {
-                slide.classList.toggle('active', index === currentNFTSlide);
-            });
-
-            // Update dots
-            nftDots.forEach((dot, index) => {
-                dot.classList.toggle('active', index === currentNFTSlide);
-            });
-        }
 
         function changeNFTSlide(direction) {
             currentNFTSlide = (currentNFTSlide + direction + nftSlides.length) % nftSlides.length;
-            updateNFTSlideshow();
+            goToNFTSlide(currentNFTSlide);
         }
 
         function goToNFTSlide(index) {
             currentNFTSlide = index;
-            updateNFTSlideshow();
+            nftContainer.style.transform = `translateX(-${index * 100}%)`;
+            
+            // Update dots
+            const dots = document.querySelectorAll('.nft-dots .dot');
+            dots.forEach((dot, i) => {
+                dot.classList.toggle('active', i === index);
+            });
         }
-
-        // Initialize NFT slideshow
-        updateNFTSlideshow();
-
-        // Add event listeners for navigation buttons
-        document.querySelector('.nft-nav button:first-child').addEventListener('click', () => changeNFTSlide(-1));
-        document.querySelector('.nft-nav button:last-child').addEventListener('click', () => changeNFTSlide(1));
-
-        // Add keyboard navigation
-        document.addEventListener('keydown', function(e) {
-            if (e.key === 'ArrowLeft') {
-                changeNFTSlide(-1);
-            } else if (e.key === 'ArrowRight') {
-                changeNFTSlide(1);
-            }
-        });
 
         function copyAddress() {
             const address = document.getElementById('coin-address').textContent;
@@ -1964,6 +1903,36 @@
             audioPlayer.src = songPath;
             audioPlayer.style.display = 'block';
             audioPlayer.play();
+        }
+
+        // Gallery Slideshow functionality
+        let currentGallerySlide = 0;
+        const galleryContainer = document.querySelector('.gallery-container');
+        const galleryItems = document.querySelectorAll('.gallery-item');
+        const galleryDots = document.querySelector('.gallery-dots');
+
+        // Create dots for gallery slides
+        galleryItems.forEach((_, index) => {
+            const dot = document.createElement('div');
+            dot.className = 'gallery-dot' + (index === 0 ? ' active' : '');
+            dot.onclick = () => goToGallerySlide(index);
+            galleryDots.appendChild(dot);
+        });
+
+        function changeGallerySlide(direction) {
+            const newIndex = (currentGallerySlide + direction + galleryItems.length) % galleryItems.length;
+            goToGallerySlide(newIndex);
+        }
+
+        function goToGallerySlide(index) {
+            currentGallerySlide = index;
+            galleryContainer.style.transform = `translateX(-${index * 100}%)`;
+            
+            // Update dots
+            const dots = document.querySelectorAll('.gallery-dot');
+            dots.forEach((dot, i) => {
+                dot.classList.toggle('active', i === index);
+            });
         }
     </script>
 </body>
