--- a/index.html
+++ b/index.html
@@ -133,15 +133,28 @@
 <!-- Coin Address Section -->
 <div id="coin-address-container" style="text-align: center; margin: 20px 0; padding: 10px; background-color: #1a1a1a; border-radius: 10px;">
     <h2 style="color: #FFD700; font-size: 24px;">💰 Coin Address:</h2>
-    <p id="coin-address" style="font-size: 18px; color: white;">4yCcLXswoYbicYLZDpTaGQWcPNUy2yNwu1MhPXNbY52u</p>
+    <p id="coin-address" style="font-size: 18px; color: white; cursor: pointer; padding: 10px; border-radius: 5px; transition: background-color 0.3s;" onclick="copyAddress()">4yCcLXswoYbicYLZDpTaGQWcPNUy2yNwu1MhPXNbY52u</p>
+    <p id="copy-message" style="color: #FFD700; font-size: 14px; margin-top: 5px;"></p>
 </div>
 
-
-        <!-- First Meme Coin Announcement -->
-        <h2 style="color: #FFD700; font-size: 28px; margin-top: 10px;">
-            🎵 The First Meme Coin on Spotify, Apple Music, YouTube Music & Amazon Music! 
-            <img src="spotify-logo.png" alt="Spotify" style="height: 28px; vertical-align: middle; margin-left: 10px;">
-        </h2>
+<script>
+function copyAddress() {
+    const address = "4yCcLXswoYbicYLZDpTaGQWcPNUy2yNwu1MhPXNbY52u";
+    navigator.clipboard.writeText(address).then(() => {
+        const message = document.getElementById('copy-message');
+        message.textContent = "✅ Address copied to clipboard!";
+        message.style.opacity = "1";
+        
+        // Reset message after 2 seconds
+        setTimeout(() => {
+            message.style.opacity = "0";
+            setTimeout(() => {
+                message.textContent = "";
+            }, 300);
+        }, 2000);
+    });
+}
+</script>
 
 <!-- Streaming Platforms Section -->
 <section id="streaming-platforms" style="text-align: center; margin: 40px auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px; width: 90%; max-width: 600px;">
